--- a/manifest.json
+++ b/manifest.json
@@ -40,7 +40,7 @@
           "sap.m": {}
         }
       },
-      "models": {
+      "models": {   
         "i18n": {
           "type": "sap.ui.model.resource.ResourceModel",
           "settings": {
@@ -52,6 +52,38 @@
       "invoice": {
 				"dataSource": "invoiceRemote"
       }
+      },
+      "routing": {
+        "config": {
+        "routerClass": "sap.m.routing.Router",
+        "type": "View",
+        "viewType": "XML",
+        "path": "sap.ui.demo.walkthrough.view",
+        "controlId": "app",
+        "controlAggregation": "pages"
+        },
+        "routes": [
+        {
+          "pattern": "",
+          "name": "overview",
+          "target": "overview"
+        },
+        {
+          "pattern": "detail",
+          "name": "detail",
+          "target": "detail"
+        }
+        ],
+        "targets": {
+        "overview": {
+          "id": "overview",
+          "name": "Overview"
+        },
+        "detail": {
+          "id": "detail",
+          "name": "Detail"
+        }
+        }
       },
       "resources": {
         "css": [
